--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -2,7 +2,7 @@
 @use 'breakpoints' as *;
 body {
     @include merriweather-regular;
-
+    width: 100vw;
 }
 
 /*---------------------------------
@@ -56,6 +56,44 @@ h2 {
 section:not(#hero, #featured-product) {
     margin-top: 100px;
 }
+.dropdown-toggle::after {
+    display: inherit;
+    margin-left: inherit;
+    vertical-align: inherit;
+    content: "";
+    border: none !important;
+}
+  
+.dropdown-menu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+@media (min-width: $breakpoint-md) {
+    .dropdown:hover > .dropdown-menu, .dropend:hover > .dropdown-menu {
+        display: block;
+    }
+}
+ul.dropdown-menu {
+    border: none;
+    border-left: 5px solid transparent;
+    box-shadow: 5px 5px 10px 0 rgba(138,155,165,.15);
+}
+// .dropdown-menu-end {
+//     position: absolute;
+//     background: #fff;
+//     left: 100%;
+//     top: 50%;
+//     margin-left: 5px;
+//     border-radius: 6px;
+//     border: 1px solid #0000002d;
+//     padding: 8px 0px;
+// }
+
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
 
 /*---------------------------------
 HEADER
@@ -87,12 +125,12 @@ HEADER
             content: '';
             position: absolute;
             bottom: 0;
-            left: 0;
+            left: 0%;
             width: 100%;
             height: 2px;
             background-color: #EFB443;
+            color: #EFB443;
             opacity: 1;
-            transform: translate3d(0, 0, 0);
         }
     }
     &::after {
@@ -100,17 +138,19 @@ HEADER
         position: absolute;
         bottom: 0;
         left: 0;
-        width: 100%;
+        width: 0%;
         height: 2px;
         background-color: #EFB443;
         opacity: 1;
-        transition: opacity 300ms, transform 300ms;
-        transform: translate3d(-100%, 0, 0);
+        transition: all 300ms;
     }
       
     &:hover::after, 
     &:focus::after{
-        transform: translate3d(0, 0, 0);
+        width: 100%;
+    }
+    &:focus-visible {
+        box-shadow: none;
     }
 }
 
@@ -119,8 +159,7 @@ HERO SECTION
 ---------------------------------*/
 #hero {
     position: relative;
-    padding-top: 20px;
-    height: calc(300px + 20vw);
+    height: 70vh;
     overflow: hidden;
 
     .backdrop {
@@ -141,169 +180,190 @@ HERO SECTION
             background: url('../media/images/new/header_hadow.png') repeat-x center;
             height: 10px;
         }
-
-        &+div {
-            margin-top: 5vh;
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0px;
+            width: 100%;
+            background: url('../media/images/new/hero_shadow.png') repeat-x center;
+            height: 10px;
         }
     }
 
-    .hero-content {
-        height: 250px;
-        width: 90vw;
-        max-width: 620px;
-        background: url('../media/images/new/hero-content-bg.png') center center no-repeat;
-        background-size: cover;
-        h2 {
-            @include pacifico-regular;
-            font-size: 2.5rem;
-            color: #255946;
-            margin-top: -6vh;
-            position: relative;
-
-            &::after {
-                content: "";
-                position: absolute;
-                right: -1.5em;
-                width: 100%;
-                height: 2.5em;
-                top: -1.5em;
-                background: url('../media/images/new/hero-content-bg-after.png') no-repeat center right;
-            }
+    .featured-content {
+        position: relative;
+        
+        svg {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: -1;
+            width: 100%;
         }
+    
+        h4 {
+            @include merriweather-bold;
+            position: relative;
+            color: #255946;
+            font-size: 2.5rem;
+        }
+    
+        .featured-product-swiper {
+            width: 100%;
+            overflow-x: hidden;
+        }
+    }
+
+    .featured-product-content-mobile {
+        background: url('../media/images/new/hero_featured_product_vector.svg') no-repeat center;
+        background-size: cover;
+        padding: 18px 5px;
     }
 }
 
 @media (min-width: $breakpoint-sm) {
     #hero {
-        height: 600px;
-
-        .backdrop {
-            &+div {
-                margin-top: 8vh;
-            }
-        }
-
-        .hero-content {
-            height: 400px;
-
-            h2 {
-                font-size: 70px;
-            }
-        }
-    }
-}
-@media (min-width: $breakpoint-lg) {
-    #hero {
         height: 800px;
 
-        .backdrop {
-            &+div {
-                margin-top: 15vh;
+        .featured-product-content-mobile {
+            padding: 18px 120px;
+        }
+        .featured-product-content-desktop {
+            max-width: 500px;
+            margin-top: -60px;
+        }
+        .featured-product-content-image {
+            padding-top: 20px; 
+            max-width: 300px;
+        }
+    }
+}
+
+@media (min-width: $breakpoint-lg) {
+    #hero {
+
+        .featured-content {
+            
+            h4 {
+                font-size: 70px;
+            }
+    
+            .featured-product-content > div {
+                margin-top: -65px;
+                gap: 10px;
             }
         }
-
+        .featured-product-content-desktop {
+            margin-top: 100px;
+        }
+        .featured-product-content-image {
+            padding-top: 80px;
+        }
     }
 }
 @media (min-width: $breakpoint-xl) {
     #hero {
-        height: 120vh;
+        height: 100vh;
 
-        .hero-content {
-            height: 70vh;
-            max-width: 900px;
-        }
-    }
-}
-
-/*---------------------------------
-FEATURED PRODUCT HOME
----------------------------------*/
-
-#hero+#featured-product {
-    position: relative;
+        .featured-content {
     
-    svg {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: -1;
-        width: 100%;
-    }
-
-    img {
-        height: 200px;
-    }
-
-    h4 {
-        @include merriweather-bold;
-        position: relative;
-        color: #255946;
-        font-size: 2.5rem;
-    }
-
-    .featured-product-content > div {
-        margin-top: 30px;
-        gap: 20px;
-    }
-
-    .featured-product-swiper {
-        width: 100%;
-        // .swiper-wrapper {
-        //     overflow-x: hidden;
-        // }
-    }
-
-}
-
-@media (min-width: $breakpoint-lg) {
-    #hero+#featured-product {
-
-        h4 {
-            font-size: 70px;
-        }
-
-        .featured-product-content > div {
-            gap: 10px;
-        }
-        
-    }
-}
-
-@media (min-width: $breakpoint-xl) {
-    #hero+#featured-product {
-        margin-top: -10vh;
-
-        .featured-product-content {
-            width: 70%;
-            margin-top: -100px;
-            img {
-                height: 450px;
+            .featured-product-content {
+                
+                margin-top: -100px;
+            }
+            .featured-product-content-image {
+                padding-top: 100px;
             }
         }
     }
-
+}
+/*---------------------------------
+ABOUT US
+---------------------------------*/
+.about-us {
+    h1 {
+        @include merriweather-black;
+        color: #EFB443;
+    }
 }
 
 /*---------------------------------
 CATEGORY CARDS
 ---------------------------------*/
-.category-cards {
-    gap: 85px;
+#categories {
+    .category-swiper {
+        width: calc(100vw - 32px);
+        height: 600px;
+        background-color: #F8EEDA;
 
-    .card {
-        border-radius: 5px;
-        background: #FFF;
-        box-shadow: 0px 12.889px 17.18px 0px rgba(0, 0, 0, 0.07);
-        border: none;
-        padding: 0px;
-        width: 370px;
+        .swiper-slide {
+            padding: 0px;
+            max-width: 600px;
 
-        .card-title {
-            text-align: center;
+            .card {
+                height: 274px;
+                border-radius: 5px;
+                border: none;
+                max-width: 600px;
+            }
+            .card-title {
+                @include merriweather-bold;
+                color: #255946;
+                font-size: 29px;
+            }
+            .card-text {
+                @include merriweather-regular;
+                color: #255946;
+            }
+            img {
+                object-fit: cover;
+                height: 100%;
+            }
+        }
+        .swiper-wrapper {
+            padding: 64px 0px;
+        }
+        .swiper-navigation {
+            color: #EFB443;
+            background-color: #FFF;
+            border-radius: 100%;
+            padding: 18px;
+            &::after {
+                font-size: 18px;
+            }
+        }
+        .swiper-pagination-bullet-active {
+            background: #255946 !important;
         }
     }
 }
+@media (min-width: $breakpoint-md) {
+    #categories {
+        .category-swiper {
+            .swiper-navigation {
+                padding: 36px;
+                &::after {
+                    font-size: 36px;
+                }
+            }
+        }
+    }
+}
+@media (min-width: $breakpoint-lg) {
+    #categories {
+        .category-swiper {
+            width: calc(100vw - 128px);
+            height: 450px;
 
+            .swiper-navigation {
+                padding: 36px;
+                &::after {
+                    font-size: 36px;
+                }
+            }
+        }
+    }
+}
 /*---------------------------------
 RECIPE CARDS
 ---------------------------------*/
@@ -327,6 +387,7 @@ RECIPE CARDS
 
     img {
         max-width: 100%;
+        width: 100%;
         border-radius: 5px;
         box-shadow: 0px 12.888px 17.184px -8.592px rgba(0, 0, 0, 0.40);
     }
@@ -359,7 +420,6 @@ RECIPE CARDS
     .recipe-card {
         .content {
             height: 469px;
-            gap: 50px;
     
         }
     }
@@ -368,24 +428,71 @@ RECIPE CARDS
 /*---------------------------------
 TIPS SECTION
 ---------------------------------*/
-.swiper {
-    width: 100%;
-    padding: 40px 20px;
-
-    .swiper-slide {
-        transform: 500ms ease;
-    }
-
-    @media (min-width: $breakpoint-md) {
-        .swiper-slide-active {
-            transform: scale(1.1);
-        }
-    }
-    
-}
 #tips {
     .category-cards {
-        gap: 25px;
+    
+        .card {
+            border-radius: 5px;
+            background: #FFF;
+            box-shadow: 0px 12.889px 17.18px 0px rgba(0, 0, 0, 0.07);
+            border: none;
+            padding: 0px;
+            width: 370px;
+    
+            .card-title {
+                text-align: center;
+            }
+        }
+    }
+    .swiper {
+        width: 100%;
+        height: 500px;
+
+        .swiper-slide {
+            transform: 500ms ease;
+        }
+
+        @media (min-width: $breakpoint-md) {
+            .swiper-slide-active {
+                transform: scale(1.1);
+            }
+        }
+        
+    }
+}
+
+/*---------------------------------
+INSTAGRAM
+---------------------------------*/
+.instagram {
+    .swiper.instagram-swiper {
+        height: 85vh;
+    }
+    .instagram-card {
+        margin: 20px;
+        border-radius: 0px 3px 3px 0px;
+        border: 1px solid #DBDBDB;
+        background: #FFF;
+        box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.08);
+    }
+    .pacifico {
+        @include pacifico-regular;
+        color: #255946;
+        font-size: 29px;
+    }
+    img {
+        height: 350px;
+    }
+}
+
+@media (min-width: $breakpoint-lg) {
+    .instagram {
+        .swiper.instagram-swiper {
+            height: 480px;
+        }
+        img {
+            height: 400px;
+        }
     }
 }
 
@@ -406,7 +513,7 @@ footer {
         top: -15px;
         left: 0px;
         width: 100%;
-        height: 15px;
+        height: 17px;
         background: url('../media/images/new/footer_before_el.png') no-repeat center;
         background-size: cover;
     }
@@ -463,7 +570,7 @@ footer {
             top: -15px;
             left: 0px;
             width: 100%;
-            height: 15px;
+            height: 17px;
         }
     
         .input-group {
@@ -498,7 +605,7 @@ footer {
         top: -15px;
         left: 0px;
         width: 100%;
-        height: 15px;
+        height: 17px;
         background: url('../media/images/new/footer_before_el2.png') center;
         background-size: cover;
     }
